--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,17 @@
             "email": "mppritchard3@hotmail.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "git",
+            "name": "wn-sociallogin-plugin",
+            "url": "https://github.com/flynsarmy/wn-sociallogin-plugin"
+        }
+    ],
     "require": {
+        "composer/installers": "~1.0",
+        "winter/wn-user-plugin": "^2.0",
+        "flynsarmy/wn-sociallogin-plugin": "dev-master",
         "jumbojett/openid-connect-php": "^0.9.2"
     }
 }
