--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "composer/installers": "~1.0",
         "winter/wn-user-plugin": "^2.0",
-        "flynsarmy/wn-sociallogin-plugin": "dev-master",
+        "flynsarmy/wn-sociallogin-plugin": "*",
         "jumbojett/openid-connect-php": "^0.9.2"
     }
 }
