--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,9 +4,32 @@ services:
     image: hiltonbanes/wintercms:php7.4-apache
     ports:
       - 8080:80
+    depends_on:
+      mariadb:
+        condition: service_healthy
     volumes:
       - .:/var/www/html/plugins/mikp/openidconnect/
     environment:
       - APP_DEBUG=true
-      - INIT_PLUGINS=true
-      # - XDEBUG_ENABLE=true
+      - COMPOSER_UPDATE=true
+      - INIT_WINTER=true
+      - CMS_ADMIN_PASSWORD=admin
+
+      - DB_TYPE=mysql
+      - DB_HOST=mariadb
+      - DB_DATABASE=wintercms
+      - DB_USERNAME=root
+      - DB_PASSWORD=root
+      - DB_PORT=3306
+
+  mariadb:
+    image: mariadb:10.4
+    command: --default-authentication-plugin=mysql_native_password
+    healthcheck:
+      test: "/usr/bin/mysql --user=root --password=root --execute \"SHOW DATABASES;\""
+      interval: 3s
+      timeout: 1s
+      retries: 5
+    environment:
+      - MYSQL_DATABASE=wintercms
+      - MYSQL_ROOT_PASSWORD=root
